fixing a list style visible

--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -37,7 +37,7 @@
     padding: 2%;
 }
 
-#recapSuggestionDashboard{
+#recapSuggestionDashboard, #recapOldSuggestionDashboard {
     list-style-type: none;
 }
 
